Test: Product 관련 테스트 수정
- 오탈자 수정
- Java8 버전 사용으로인한 메소드 수정